# Bilevel-Planner

./: .gitignore  CMakeLists.txt  README.md  spatialSolver.py
dataset/: tgp_1.tgp  tgp_10.tgp  tgp_100.tgp  tgp_11.tgp  tgp_12.tgp  tgp_13.tgp  tgp_14.tgp  tgp_15.tgp  tgp_16.tgp  tgp_17.tgp  tgp_18.tgp  tgp_19.tgp  tgp_2.tgp  tgp_20.tgp  tgp_21.tgp  tgp_22.tgp  tgp_23.tgp  tgp_24.tgp  tgp_25.tgp  tgp_26.tgp  tgp_27.tgp  tgp_28.tgp  tgp_29.tgp  tgp_3.tgp  tgp_30.tgp  tgp_31.tgp  tgp_32.tgp  tgp_33.tgp  tgp_34.tgp  tgp_35.tgp  tgp_36.tgp  tgp_37.tgp  tgp_38.tgp  tgp_39.tgp  tgp_4.tgp  tgp_40.tgp  tgp_41.tgp  tgp_42.tgp  tgp_43.tgp  tgp_44.tgp  (+60 more)
dataset/random_tests/: tgp_0.tgp
include/ott/: TGProblem.h  bezier_base.h  data_types.h  eigen_boost_serialization.h  pybind_box_type.h
src/: bezier_base.cpp  bezier_wrapper.cpp  problem_constructor.cpp  pybind_wrapper.cpp
